# nvim

./: .gitignore  CLAUDE.md  Makefile  README.md  init.lua  install_gotools.sh  install_macos.sh  install_pytools.sh  install_rust.sh  pyproject.toml  requirements.txt  setup_nvim.sh
after/ftplugin/: go.lua  lua.lua  lua.vim  markdown.lua  python.lua  python.vim  text.lua  typescript.lua
docs/: architecture.md  code-style.md  commands-build-test.md  components.md  development-workflow.md  features.md  helpers.md  important-notes.md  lsp.md  mappings.md  navigation.md  requirements.md  settings.md  setup.md  structure.md  structure_1.md
docs/plugins/: ai.md  files.md  lang.md  mason.md  navigation.md  overview.md  ui.md  utils.md
ftplugin/: lspinfo.lua
install/: install.sh
lua/_plugins/: bootstrap.lua  bufferline.lua  cmp.lua  harpoon.lua  packer_bootstap.lua  prettyfold.lua
lua/config/: commands.lua
lua/helpers/: auto.lua  autocommands.lua  bookmark.lua  conflict-marker.lua  cursor.lua  file_info.lua  fs.lua  functions.lua  gist.lua  git-info.lua  global.lua  hot-reload.lua  icons.lua  illuminate.lua  init.lua  interface.lua  keys.lua  log.lua  lsp.lua  providers.lua  renamer.lua  shell.lua  todos.lua  unimpaired.lua  user.lua  utils.lua  winbar.lua  yaml.lua
lua/mappings/: ai.lua  applications.lua  buffers.lua  clipboard.lua  comments.lua  files.lua  (+29 more)
notes/: mappings_scratch.lua  options.lua
scripts/: _activate  find_headers.py  install_gotools.sh  install_node.sh  install_pytools.sh  setup-python.sh  setup_nvim.sh
skeletons/: main.py  py3class  zsh.sh
(+460 files in other folders)
