[project]
name = "nvim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright",
    "black",
    "pre-commit",
    "pynvim",
    "python-lsp-jsonrpc",
    "python-lsp-server",
    "ruff",
    "tiktoken",
]
